--- a/layout.html
+++ b/layout.html
@@ -1,9 +1,68 @@
+<style>
+
+button{
+  width: 100%;
+  height: 12.5%;
+  color: green;
+  font: Helvetica;
+  <!-- comicsans -->;
+  background-color: #FF3300;
+}
+
+#settings{
+  position:fixed;
+  width: 10%;
+  height: 5%;
+  right: 30px;
+  background-color: purple;
+}
+
+p{
+  font-family: Helvetica;
+	font-size: 12px;
+	text-align: center;
+  width:25%
+	padding:0;
+	margin: 0;
+	border:0;
+}
+li {
+  font-family: Helvetica;
+	font-size: 12px;
+	text-align: center;
+  width:25%
+	padding:0;
+	margin: 0;
+	border:0;
+  display: inline-block;
+}
+</style>
+
 <!DOCTYPE html>
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<button type="button" id="settings"><img src="gear.png" alt="gear" style="height:20px;"></button>
+
+<textarea placeholder="PLACEHOLDERRRR" style="margin: 0px; height: 275px; width:100%;"></textarea>
+
+
+<div class="buttons">
+<button type="button" id="button1">Button 1</button>
+<button type="button" id="button2">Button 2</button>
+<button type="button" id="button3">Button 3</button>
+<button type="button" id="button4">Button 4</button>
+</div>
+
+<footer>
+<p>Uncommon Hacks 2019</p>
+<ul style="list-style-type:none;">
+  <li>Arvind Krishnan</li>
+  <li>Parth Patel</li>
+  <li>Ayush Patel</li>
+  <li>Kevin Li</li>
+</ul>
+</footer>
 
 </body>
 </html>
