--- a/layout.html
+++ b/layout.html
@@ -1,11 +1,19 @@
 <style>
+body{
+  background-color: blue;
+}
+
+@font-face {
+  font-family: comicsans;
+  src: url(comic.tff);
+}
 
 button{
   width: 100%;
   height: 12.5%;
   color: green;
-  font: Helvetica;
-  <!-- comicsans -->;
+  font: comicsans;
+  font-size: 22px;
   background-color: #FF3300;
 }
 
@@ -18,16 +26,18 @@ button{
 }
 
 p{
-  font-family: Helvetica;
+  font-family: 'Raleway', sans-serif;
 	font-size: 12px;
 	text-align: center;
   width:25%
 	padding:0;
 	margin: 0;
 	border:0;
+  color: yellow;
 }
+
 li {
-  font-family: Helvetica;
+  font-family: 'Raleway', sans-serif;
 	font-size: 12px;
 	text-align: center;
   width:25%
@@ -35,17 +45,27 @@ li {
 	margin: 0;
 	border:0;
   display: inline-block;
+  color: yellow;
+}
+ul{
+  	text-align: center;
 }
 </style>
 
 <!DOCTYPE html>
 <html>
+<head>
+<title>Insert Game Title</title>
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+<!--<script src="javascript.js"></script>-->
+</head>
 <body>
 
 <button type="button" id="settings"><img src="gear.png" alt="gear" style="height:20px;"></button>
 
-<textarea placeholder="PLACEHOLDERRRR" style="margin: 0px; height: 275px; width:100%;"></textarea>
-
+<!--<textarea placeholder="PLACEHOLDERRRR" style="margin: 0px; height: 275px; width:100%;"></textarea>-->
+<img src="annex.jpeg" style=" height:330px; width:100%">
 
 <div class="buttons">
 <button type="button" id="button1">Button 1</button>
