--- a/layout.html
+++ b/layout.html
@@ -16,13 +16,19 @@ button{
   font-size: 22px;
   background-color: #FF3300;
 }
-
+button:hover{
+  background-color: green;
+  color: #FF3300;
+}
 #settings{
   position:fixed;
   width: 10%;
   height: 5%;
   right: 30px;
   background-color: purple;
+}
+#settings:hover{
+  background-color: white;
 }
 
 p{
