--- a/layout.html
+++ b/layout.html
@@ -1,18 +1,19 @@
 <style>
 body{
   background-color: blue;
+
 }
 
 @font-face {
   font-family: comicsans;
-  src: url(comic.tff);
+  src: url('./comic.ttf');
 }
 
 button{
   width: 100%;
   height: 12.5%;
   color: green;
-  font: comicsans;
+  font-family: comicsans !important;
   font-size: 22px;
   background-color: #FF3300;
 }
@@ -85,7 +86,7 @@ ul{
 <ul style="list-style-type:none;">
   <li>Arvind Krishnan</li>
   <li>Parth Patel</li>
-  <li>Ayush Patel</li>
+  <li>Aayush Patel</li>
   <li>Kevin Li</li>
 </ul>
 </footer>
