added commas to footer

--- a/layout.html
+++ b/layout.html
@@ -84,9 +84,9 @@ ul{
 <footer>
 <p>Uncommon Hacks 2019</p>
 <ul style="list-style-type:none;">
-  <li>Arvind Krishnan</li>
-  <li>Parth Patel</li>
-  <li>Aayush Patel</li>
+  <li>Arvind Krishnan,</li>
+  <li>Parth Patel,</li>
+  <li>Aayush Patel,</li>
   <li>Kevin Li</li>
 </ul>
 </footer>
