organized files, updated layout

--- a/layout.html
+++ b/layout.html
@@ -6,7 +6,7 @@ body{
 
 @font-face {
   font-family: comicsans;
-  src: url('./comic.ttf');
+  src: url('./assets/comic.ttf');
 }
 
 button{
@@ -72,7 +72,7 @@ ul{
 <button type="button" id="settings"><img src="gear.png" alt="gear" style="height:20px;"></button>
 
 <!--<textarea placeholder="PLACEHOLDERRRR" style="margin: 0px; height: 275px; width:100%;"></textarea>-->
-<img src="annex.jpeg" style=" height:330px; width:100%">
+<img src="assets/annex.jpeg" style=" height:330px; width:100%">
 
 <div class="buttons">
 <button type="button" id="button1">Button 1</button>
