deleted redundant files, updated script file src in layout

--- a/layout.html
+++ b/layout.html
@@ -65,7 +65,7 @@ ul{
 <title>Insert Game Title</title>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-<!--<script src="javascript.js"></script>-->
+<!--<script src="script/functions.js"></script>-->
 </head>
 <body>
 
