--- a/layout.html
+++ b/layout.html
@@ -1,95 +1,43 @@
-<style>
-body{
-  background-color: blue;
-
-}
-
-@font-face {
-  font-family: comicsans;
-  src: url('./assets/comic.ttf');
-}
-
-button{
-  width: 100%;
-  height: 12.5%;
-  color: green;
-  font-family: comicsans !important;
-  font-size: 22px;
-  background-color: #FF3300;
-}
-button:hover{
-  background-color: green;
-  color: #FF3300;
-}
-#settings{
-  position:fixed;
-  width: 10%;
-  height: 5%;
-  right: 30px;
-  background-color: purple;
-}
-#settings:hover{
-  background-color: white;
-}
-
-p{
-  font-family: 'Raleway', sans-serif;
-	font-size: 12px;
-	text-align: center;
-  width:25%
-	padding:0;
-	margin: 0;
-	border:0;
-  color: yellow;
-}
-
-li {
-  font-family: 'Raleway', sans-serif;
-	font-size: 12px;
-	text-align: center;
-  width:25%
-	padding:0;
-	margin: 0;
-	border:0;
-  display: inline-block;
-  color: yellow;
-}
-ul{
-  	text-align: center;
-}
-</style>
-
 <!DOCTYPE html>
 <html>
-<head>
-<title>Insert Game Title</title>
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <head>
+    <title>Insert Game Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link type="text/css" href="css/style.css" rel="stylesheet"/>
 
-<!--<script src="script/functions.js"></script>-->
-</head>
-<body>
+    <!--<script src="script/functions.js"></script>-->
+    </head>
 
-<button type="button" id="settings"><img src="gear.png" alt="gear" style="height:20px;"></button>
+    <body>
+        <button type="button" id="settings"><img src="assets/gear.png" alt="gear" style="height:20px;"></button>
 
-<!--<textarea placeholder="PLACEHOLDERRRR" style="margin: 0px; height: 275px; width:100%;"></textarea>-->
-<img src="assets/annex.jpeg" style=" height:330px; width:100%">
+        <!--<textarea placeholder="PLACEHOLDERRRR" style="margin: 0px; height: 275px; width:100%;"></textarea>-->
+        <img id="title-image" src="assets/annex.jpeg">
 
-<div class="buttons">
-<button type="button" id="button1">Button 1</button>
-<button type="button" id="button2">Button 2</button>
-<button type="button" id="button3">Button 3</button>
-<button type="button" id="button4">Button 4</button>
-</div>
+        <div class="buttons">
+            <div class="option-contain">
+                <button class="options" type="button" id="button1">Button 1</button>
+            </div>
+            <div class="option-contain">
+                <button class="options" type="button" id="button2">Button 2</button>
+            </div>
+            <div class="option-contain">
+                <button class="options" type="button" id="button3">Button 3</button>
+            </div>
+            <div class="option-contain">
+                <button class="options" type="button" id="button4">Button 4</button>
+            </div>
+        </div>
 
-<footer>
-<p>Uncommon Hacks 2019</p>
-<ul style="list-style-type:none;">
-  <li>Arvind Krishnan,</li>
-  <li>Parth Patel,</li>
-  <li>Aayush Patel,</li>
-  <li>Kevin Li</li>
-</ul>
-</footer>
+        <footer>
+            <p class="foot">Uncommon Hacks 2019</p>
 
-</body>
+            <ul class="list" style="list-style-type:none;">
+              <li class="item">Arvind Krishnan,</li>
+              <li class="item">Parth Patel,</li>
+              <li class="item">Aayush Patel,</li>
+              <li class="item">Kevin Li</li>
+            </ul>
+        </footer>
+    </body>
 </html>
