--- a/layout.html
+++ b/layout.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link type="text/css" href="css/style.css" rel="stylesheet"/>
 
-    <!--<script src="script/functions.js"></script>-->
+    <!--<script src="scripts/functions.js"></script>-->
     </head>
 
     <body>
