--- a/layout.html
+++ b/layout.html
@@ -5,7 +5,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link type="text/css" href="css/style.css" rel="stylesheet"/>
 
-    <!--<script src="scripts/functions.js"></script>-->
+    <script type="text/javascript" src="scripts/functions.js"></script>
+
     </head>
 
     <body>
@@ -16,7 +17,7 @@
 
         <div class="buttons">
             <div class="option-contain">
-                <button class="options" type="button" id="button1">Button 1</button>
+                <button class="options" type="button" id="button1" onclick="button1Click();">Button 1</button>
             </div>
             <div class="option-contain">
                 <button class="options" type="button" id="button2">Button 2</button>
