--- a/layout.html
+++ b/layout.html
@@ -19,16 +19,16 @@
 
         <div class="buttons">
             <div class="option-contain">
-                <button class="options" type="button" id="button1" onclick="buttonFuntion(1)">Start Game</button>
+                <button class="options" type="button" id="button1" onclick="buttonFunction(1)">Start Game</button>
             </div>
             <div class="option-contain">
-                <button class="options" type="button" id="button2" onclick="buttonFuntion(2)">Quit</button>
+                <button class="options" type="button" id="button2" onclick="buttonFunction(2)">Quit</button>
             </div>
             <div class="option-contain">
-                <button class="options" type="button" id="button3" onclick="buttonFuntion(3)">Feels Bad</button>
+                <button class="options" type="button" id="button3" onclick="buttonFunction(3)">Feels Bad</button>
             </div>
             <div class="option-contain">
-                <button class="options" type="button" id="button4" onclick="buttonFuntion(4)">--</button>
+                <button class="options" type="button" id="button4" onclick="buttonFunction(4)">--</button>
             </div>
         </div>
 
