--- a/layout.html
+++ b/layout.html
@@ -12,18 +12,18 @@
 
     <body>
         <div class="header">
-            <h3 id="maintext"></h3>
+            <h3 id="maintext">Game: Kill the Orcs</h3>
             <div class="stats-contain">
                 <div class="player-stats">
-                    <h3 id = "player_hp">player_hp</h3>
-                    <h3 id = "player_atk">player_atk</h3>
+                    <h3 id = "player_hp"></h3>
+                    <h3 id = "player_atk"></h3>
                 </div>
                 <div class="enemy-stats">
-                    <h3 id = "orc_hp">orc_hp</h3>
-                    <h3 id = "orc_atk">orc_atk</h3>
+                    <h3 id = "orc_hp"></h3>
+                    <h3 id = "orc_atk"></h3>
                 </div>
             </div>
-            <h3 id = "directions">directions</h3>
+            <h3 id = "directions"></h3>
         </div>
         <div class="player-stats">
             <p id="player_hp"></p>
