--- a/layout.html
+++ b/layout.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Where We Dropping Boys?</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link type="text/css" href="css/style.css" rel="stylesheet"/>
+        <title>Where We Dropping Boys?</title>
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link type="text/css" href="css/style.css" rel="stylesheet"/>
 
-    <script src="scripts/player.js"></script>
-    <script src="scripts/enemy.js"></script>
-    <script src="scripts/functions.js"></script>
+        <script src="scripts/storyline.js"></script>
+        <script src="scripts/player.js"></script>
+        <script src="scripts/enemy.js"></script>
+        <script src="scripts/functions.js"></script>
     </head>
 
-    <body>
+    <body onload="start_game()">
         <div class="header">
             <h3 id="maintext"></h3>
-            <div class="stats-contain">
-                <div class="player-stats">
-                    <h3 id = "player_hp">player_hp</h3>
-                    <h3 id = "player_atk">player_atk</h3>
+            <div class="combat-contain">
+                <div class="stats-contain">
+                    <div class="player-stats">
+                        <h3 id = "player_hp">player_hp</h3>
+                        <h3 id = "player_atk">player_atk</h3>
+                    </div>
+                    <div class="enemy-stats">
+                        <h3 id = "orc_hp">orc_hp</h3>
+                        <h3 id = "orc_atk">orc_atk</h3>
+                    </div>
                 </div>
-                <div class="enemy-stats">
-                    <h3 id = "orc_hp">orc_hp</h3>
-                    <h3 id = "orc_atk">orc_atk</h3>
-                </div>
+                <h3 id = "directions">directions</h3>
             </div>
-            <h3 id = "directions">directions</h3>
         </div>
         <div class="player-stats">
             <p id="player_hp"></p>
