--- a/layout.html
+++ b/layout.html
@@ -11,7 +11,7 @@
         <script src="scripts/functions.js"></script>
     </head>
 
-    <body onload="start_game()">
+    <body>
         <div class="header">
             <h3 id="maintext">Game: Kill the Orcs</h3>
             <div class="stats-contain">
