--- a/layout.html
+++ b/layout.html
@@ -23,7 +23,7 @@
                     <h3 id = "orc_hp"></h3>
                     <h3 id = "orc_atk"></h3>
                 </div>
-                <h3 id = "directions">directions</h3>
+                <h3 id = "directions"></h3>
             </div>
         </div>
         <div class="player-stats">
