--- a/layout.html
+++ b/layout.html
@@ -41,10 +41,10 @@
                 <button class="options" type="button" id="option1" onclick="click_handler(1)">Start Game</button>
             </div>
             <div class="option-contain">
-                <button class="options" type="button" id="option2" onclick="click_handler(2)">Quit</button>
+                <button class="options" type="button" id="option2" onclick="click_handler(2)">---</button>
             </div>
             <div class="option-contain">
-                <button class="options" type="button" id="option3" onclick="click_handler(3)">Feels Bad</button>
+                <button class="options" type="button" id="option3" onclick="click_handler(3)">---</button>
             </div>
             <div class="option-contain">
                 <button class="options" type="button" id="option4" onclick="click_handler(4)">--</button>
