fixed some bugs

--- a/layout.html
+++ b/layout.html
@@ -54,7 +54,7 @@
         <footer>
             <p class="foot">Uncommon Hacks 2019</p>
 
-            <p class="foot">Arvind Krishnan, Parth Patel, Aayush Patel, Kevin Li</p>
+            <p class="foot">Arvind Krishnan, Parth Patel, Kevin Li, Aayush Patel</p>
         </footer>
     </body>
 </html>
