updated styling and html layout

--- a/layout.html
+++ b/layout.html
@@ -13,7 +13,8 @@
 
     <body>
         <div class="header">
-            <h3 id="maintext">Game: Kill the Orcs</h3>
+            <h3 id="title">Game: Kill the Orcs</h3>
+            <h3 id="maintext"></h3>
             <div class="stats-contain">
                 <div class="player-stats">
                     <h3 id = "player_hp"></h3>
